fix: blue color when taping buttons on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,11 @@
 * {
   box-sizing: border-box;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: transparent;
+}
